<resources>
    <string name="app_name">中企创富</string>

    <string name="recommand">推荐</string>
    <string name="my">我的</string>
    <string name="ps">温馨提示：申请3家以上产品，借款成功率提升90%</string>
    <string name="quotaname">额度:</string>
    <string name="rixi">日息:</string>
    <string name="flag">起</string>
    <string name="pre">最快 </string>
    <string name="end">下款</string>
    <string name="request_loan">申请贷款</string>
    <string name="loan_num">货款</string>
    <string name="exits">退出</string>
    <string name="login">点击登录</string>
    <string name="all">全部</string>


    <string name="logintxt">登录</string>



    <string name="mine">我的</string>
    <string name="logo">LOGO</string>
    <string name="phone_num">请输入手机号码</string>
    <string name="chek_num">输入验证码</string>
    <string name="getcheck">获取验证码</string>

    <string name="number_error">手机号码输入格式不正确</string>
    <string name="numberorcheck_error"> 手机号码或验证吗输入格式不正确</string>

    <string name="back">返回</string>
    <string name="nonet">当前没有网络</string>
    <string name="error_requwt">访问服务器失败,请刷新重试</string>

    <string name="loan_all">全部</string>
    <string name="type">类型</string>
    <string name="money">金额</string>
    <string name="order">综合排序</string>

    <!--推荐页面-->
    <string name="recommand_title">智能推荐</string>
    <string name="recommand_bigdata">大数据推荐</string>
    <string name="recommand_youneed">为您推荐最适合的贷款产品</string>
    <string name="recommand_borrow">您想借多少？</string>
    <string name="recommand_long">您想借多久？</string>
    <string name="recommand_mine_warn">*填写借款人本人信息，所填信息仅做预审认证使用</string>
    <string name="recommand_mine_title">个人信息</string>
    <string name="recommand_phone_number">手机号</string>
    <string name="recommand_name">姓名</string>
    <string name="recommand_who_number">身份证</string>
    <string name="recommand_phone_number_hint">请输入手机号</string>
    <string name="recommand_name_hint">请输入姓名</string>
    <string name="recommand_who_number_hint">身份证号</string>
    <string name="recommand_who_mine_service">我已阅读并同意</string>
    <string name="recommand_who_mine_service_info">《用户注册服务协议》</string>
    <string name="recommand_goods_condition_title">申请条件</string>
    <string name="recommand_goods_condition_content">手机实名，运营商验证即可申请。</string>
    <string name="recommand_goods_step_title">申请流程</string>
    <string name="recommand_goods_step_content">下载APP-填写申请资料-等待审核。</string>
    <string name="recommand_goods_other_title">其他说明</string>
    <string name="recommand_goods_other_content">需要验证相关其他事项，请准确填写。</string>
    <string name="recommand_goods_realy_name">实名认证</string>
    <string name="recommand_i_agree">我同意</string>
    <string name="recommand_regist_servicr">《注册用户服务协议》</string>

    <string name="money_limit_1">5千以下</string>
    <string name="money_limit_2">5千-1万</string>
    <string name="money_limit_3">1万-2万</string>
    <string name="money_limit_4">2万-3万</string>
    <string name="money_limit_5">3万以上</string>

    <string name="date_limit_1">1-3月</string>
    <string name="date_limit_2">3-6月</string>
    <string name="date_limit_3">6-12月</string>
    <string name="date_limit_4">12-18月</string>
    <string name="date_limit_5">18-24月</string>
    <string name="date_limit_6">24-36月</string>

    <!--嘟嘟故事的文本-->
    <string name="recommendedtopics">推荐专题</string>
    <string name="recommendationstory">推荐故事</string>
    <string name="story_state">故事概要</string>
    <string name="story_userful">教育意义</string>
    <string name="story_content">故事全文</string>
    <string name="story_resource">故事来源</string>
    <string name="story_before_sleep">睡前故事</string>
    <string name="friend_circle">朋友圈</string>
    <string name="qq">QQ</string>
    <string name="wx">微信</string>
    <string name="wb">微博</string>
    <string name="cancel">取消</string>
    <string name="crazy">疯狂赚钱</string>
    <string name="daytask">日常任务</string>
    <string name="home">首页</string>
    <string name="loan">赚现金</string>
    <string name="daybenefits">每日福利</string>
    <string name="subjecy_story">专题故事</string>
    <string name="serialization_story">连载故事</string>
    <string name="game_caicai">猜成语赢大奖</string>
    <string name="game_activity">活动规则</string>
    <string name="game_tree">摇钱树</string>
    <string name="my_money">现金余额：</string>
    <string name="goto_money">去赚钱</string>
    <string name="select_crash_moneynumber">选择提现金额</string>

    <string name="fra_my_money_num_1">1元</string>
    <string name="fra_my_money_num_10">10元</string>
    <string name="fra_my_money_num_30">30元</string>

    <string name="fra_my_wx_ps">因微信规则，每天只能提现1次</string>
    <string name="fra_my_wx_button">提现到微信零钱</string>
    <string name="like">推荐给好友</string>
    <string name="message">联系我们</string>
    <string name="service">服务协议</string>
    <string name="fra_my_login_ps">用微信登录，赚现金</string>
    <string name="fra_my_wx_login">微信一键登录</string>
    <string name="fra_my_try_it">用用再说</string>
    
    <string name="residueNum">剩余次数</string>
    <string name="numberofdraws">抽奖次数</string>
    <string name="extradraw">额外抽奖</string>

    <string name="newone">新人有钱送，送您</string>
    <string name="wx_get">微信登录领取</string>
</resources>
